--- a/bootstrap.css
+++ b/bootstrap.css
@@ -1,49 +1,52 @@
-/**{
-    box-sizing: border-box; 
-}*/
+/*need to make images and layout responsive. Add media queries
+*/
 
 
 body {
     font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; 
-    /*color: #ffffff;
-    border-color: #ddddd;
-    margin-left:auto;
-    margin-right: auto;
-    width: auto;
-    padding:0;
-    margin:0;*/    
-}
-
-.container {
-
 }
 
 
-.mylogo {
-    
-
-}
-
-h1 {
+/*logo-need to align with card*/
+ h1 {
     background-color: #4aaaa5;
     padding-bottom: 20px;
     font-family: 'Georgia', Times, Times New Roman, serif;
-}
+    width: auto;
+    height:100px;
+    padding-top: 20px;
+    padding-left:10px;
+    padding-right: 10px;
+    font-weight:bold;
+    font-size: 32px;   
+} 
+
 .navbar {
     background-color: #ffffff;
     border-bottom: 1px solid #cccccc; 
+    margin-left:0px;  
 }
 
 .nav {
     border: none;
+    padding-left:0;
 }
+
+
+/*need to shorten borders*/
 .nav-item {
     color: #cccccc;
     background-color: #ffffff;
+    border-collapse: separate; 
+    border-left: 1px solid #dddddd; 
+}  
+
+.nav-item:first-child {
+    border-left: 0 none;
 }
 
 .nav-link {
-    color: #cccccc;
+    color: #cccccc;  
 }
 
 .card-title {
@@ -57,316 +60,161 @@ p {
 
 }
 
-#topheader {
-    /*position: relative;*/
-    /*clear:both;
-    border-bottom: 1px solid #cccccc;  
-    background: #ffffff;
-    Height: 100px;
-    width:auto;
-    z-index: -2;
-    font-family: 'Georgia', Times, Times New Roman, serif;*/
-    
- }
-
-/*#logo {
-    background: #4aaaa5;
-    /*border: 1px solid #4aaaa5;*/
-    /*float: left;
-    color: white;
-    margin-bottom: 0;
-    margin-top: 0:
-    padding: 20px;
-    position: relative;
-    display: block;
-    margin-inline-start: 140px;
-    height:100px;
-    padding-top: 10px;
-    padding-left:10px;
-    padding-right: 10px;
-}
-
-/*need to style table*/
-/*#main-menu {
-        float: right;
-        border-color:#cccccc ;  
-        background: #ffffff;
-        position: relative;
-        width: 300px;
-        display: table;
-        border-collapse: separate; 
-        color: #cccccc;
-        text-align: center;*/               
-}
-
-/*#main-menu:hover {
-    color: blue;
-}*/
-
-
-
-/*#aboutme {
-    align-content:center;
-    text-align: space-around;
-    height: 400px;
-    border: 1px solid #dddddd;
-    padding-top:20px;
-    background-color: #ffffff;
-    margin-top: 40px;
-    width: 960px;
-    margin-bottom: 80px;
-    line-height: 100% ;
-    margin-left: auto;
-    margin-right:auto;
-}
-
-#contact {
-    align-content:center;
-    text-align: space-around;
-    height: 400px;
-    border: 1px solid #dddddd;
-    padding-top:20px;
-    background-color: #ffffff;
-    margin-top: 40px;
-    width: 960px;
-    margin-bottom: 80px;
-    line-height: 100% ;
-    margin-left: auto;
-    margin-right:auto;
-    color: #777777;
-}
-
-
-#portfolio {
-    align-content:center;
-    text-align: space-around;
-    height: 600px;
-    border: 1px solid #dddddd;
-    padding-top:20px;
-    background-color: #ffffff;
-    margin-top: 40px;
-    width: 960px;
-    margin-bottom: 80px;
-    /*line-height: 100% ;*/
-    /*margin-left: auto;
-    margin-right:auto;
-    /*position: relative;*/
-}
  
-/*h2 {
-    color: #4aaaa5;
-    background: #ffffff;
-    border-bottom: 2px solid #cccccc;
+h2 {
     padding-bottom: 20px;
-    margin-right: 20px;
-    margin-left: 20px;
     font-family: 'Georgia', Times, Times New Roman, serif;
+    font-weight: bold;
 }
 
-p {
-    color: #777777;
-    text-align: justify left ;
-    float: none;
-    line-height: 30px;
-    align-content: space-around;
-    margin-inline-end: 20px;
-    margin-inline-start: 20px;
-}*/
-
-footer {
-    /*position:sticky; /* need to make footer sticky*/
-    background: #666666;
-    /*width: auto;*/
-    text-align: center;
-    /*height: 40px;
-    margin-bottom: auto 0;
-    padding-top: 30px;
-    padding-bottom: 20px;  
-    border-top: 8px solid #4aaaa5;
-    clear: both;*/
-}
-
-/*#bio-image {
-    float: left;
-    width: 200px;
-    height: 200px;
-    margin-right: 20px;
-    margin-left: 20px;
-}*/
-
-/*input[type=text], select {
+input[type=text], select {
     width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
+    padding: 5px 10px;
+    margin: 0px 0;
     display: inline-block;
     border: 1px solid #ccc;
-    /*border-radius: 4px;*/
   }
+
+::placeholder {
+    font-size: small;
+}
   
-  /*input[type=submit] {
+input[type=submit] {
     width: 10%;
     background-color: #4aaaa5;
     color: white;
     padding: 5px 5px;
     margin: 8px 0;
     border: none;
-    border-radius: none;
-    cursor: pointer;
   }
   
   input[type=submit]:hover {
     background-color: #45a049;
   }
   
-  div {
+
+.card {
     border-radius: 0px;
-    background-color: #ffffff;
-    padding-left: 10px;
-    padding-right: 10px;
-    /*padding: 20px;*/
-    /*padding-bottom:0;
-  }
+}
 
 
 input [type=submit], #message {
-    height: 80px;
-}
-
-#portfolio-icons {
-    height:500px;
-    /*position: relative;*/
-    overflow: hidden;
-   
-}
-
-/*.portfolio-pics {
-    height:480px;
-    width: 925px;
-    /*float: left;
-    /*align-content: left;*/
-    /*margin-left: 20px;
-    /*position: relative;*/
-    overflow: hidden;
-}
-    
-
-/*need to position images and place labels elements with names on top
-of images*/
-
-/*#porfolio-image1 {
-    position: fixed;
-    float: left;
-    margin-left:20px;
-    margin-right: 20px;
-    width: 50%;
     height: 200px;
-    width: 200px;
 }
 
-#portfolio-image2 {
+
+.text-block2 {
+    background: #4aaaa5;
+    color: white; 
+    text-align: center;
+    width: 274px;
     position: absolute;
-    float: left;
-    clear: right;
-    height: 125px;
-    width: 125px;
+    padding: 10;
+    height: 50px;
+    bottom:20px;
+    right: 20px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
-#porfolio-image3 {
-    position: fixed;
-    float: left;   
-    width: 125px;
-    height: 125px;
+.text-block3 {
+    background: #4aaaa5;
+    color: white; 
+    text-align: center;
+    width: 274px;
+    position: absolute;
+    padding: 0;
+    height: 50px;
+    bottom:20px;
+    right: 20px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
-#portfolio-image4 {
-    position: relative;
-    float: left;
-    clear: right;
-    margin-top:0;
+.text-block4 {
+    background: #4aaaa5;
+    color: white; 
+    text-align: center;
+    width: 274px;
+    position: absolute;
+    padding: 0;
+    height: 50px;
+    bottom:20px;
+    right: 20px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+}
+
+/*need to make sticky and adjust width*/
+footer {
+    text-align: center;
+    border-top: 8px solid #4aaaa5;
+    background: #666666;
+    width: auto;
+    height: 50px;
+    margin-bottom: auto 0;
     margin-left: 0;
+    margin-right: 0;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    clear: both;
+    position:sticky;
+    font-size: 12px;
+ }
+
+html,
+body {
+    height: 100%
 }
 
-#portfolio-image5 {
-    position: absolute;
-    float: left;
-    clear: both;
-    margin-left: auto;
+.container {
+    height: auto !important;
+    height: 100%;
+    min-height: 100%;
+    margin: 0 auto -105px;
+}
 
+footer,
+.push {
+    height: 105px;
 }
 
 .text-block {
     background: #4aaaa5;
     color: white; 
     text-align: center;
-    width: 125px;
+    width: 274px;
     position: absolute;
-    margin:0;
     padding: 0;
-    border-left: 0;
-    border-right:0;
     height: 50px;
-    /*bottom:20px;
-    /*right: 20px;
-}*/
-
-
-/*.text-block2 {
-    background: #4aaaa5;
-    color: white; 
-    text-align: center;
-    width: 125px;
-    position: absolute;
-    margin:0;
-    padding: 0;
-    border-left: 0;
-    border-right:0;
-    height: 50px;
-    /*bottom:20px;
-    /*right: 20px;*/
+    bottom:20px;
+    right: 20px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
-/*.text-block3 {
+.text-block5 {
     background: #4aaaa5;
     color: white; 
     text-align: center;
-    width: 125px;
+    width: 274px;
     position: absolute;
-    margin:0;
     padding: 0;
-    border-left: 0;
-    border-right:0;
     height: 50px;
-    /*bottom:20px;
-    /*right: 20px;*/
+    bottom:20px;
+    right: 20px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
-/*.text-block4 {
-    background: #4aaaa5;
-    color: white; 
-    text-align: center;
-    width: 125px;
-    position: absolute;
-    margin:0;
-    padding: 0;
-    border-left: 0;
-    border-right:0;
-    height: 50px;
-    /*bottom:20px;
-    /*right: 20px;*/
+h4 {
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
+form {
+    color: #777777;
+}
 
-/*.text-block5 {
-    background: #4aaaa5;
-    color: white; 
-    text-align: center;
-    width: 125px;
-    position: absolute;
-    margin:0;
-    padding: 0;
-    border-left: 0;
-    border-right:0;
-    height: 50px;
-    /*bottom:20px;
-    /*right: 20px;*/
-}*/
+/*need to remove borders from thumbnails, but have labels
+still cover entire width of pic*/
+
+.img-thumbnail {
+   border: 1px hidden;
+}
+
