--- a/bootstrap.css
+++ b/bootstrap.css
@@ -1,28 +1,22 @@
-/*need to make images and layout responsive. Add media queries
-*/
-
-
 body {
-    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif; 
+    font-family: 'Crimson Text', serif;
 }
 
-
-/*logo-need to align with card*/
  h1 {
     background-color: #4aaaa5;
     padding-bottom: 20px;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    width: auto;
+    /*width: auto;*/
     height:100px;
     padding-top: 20px;
-    padding-left:10px;
-    padding-right: 10px;
+    /*padding-left:10px;*/
+    /*padding-right: 10px;*/
     font-weight:bold;
     font-size: 32px;   
+    margin-left: 0px;
 } 
 
 .navbar {
-    background-color: #ffffff;
+    background-color: #4aaaa5;
     border-bottom: 1px solid #cccccc; 
     margin-left:0px;  
 }
@@ -32,27 +26,18 @@ body {
     padding-left:0;
 }
 
-
-/*need to shorten borders*/
 .nav-item {
-    color: #cccccc;
-    background-color: #ffffff;
-    border-collapse: separate; 
-    border-left: 1px solid #dddddd; 
+    color: #ffffff;
+    background-color: #4aaaa5;
 }  
 
-.nav-item:first-child {
-    border-left: 0 none;
-}
-
-.nav-link {
-    color: #cccccc;  
+.card {
+    border: 1px solid #4aaaa5;
 }
 
 .card-title {
     color: #4aaaa5;
-    border-bottom: 2px solid #dddddd;
-    font-family: 'Georgia', Times, Times New Roman, serif;
+    border-bottom: 2px solid #4aaaa5;
 }
 
 p {
@@ -63,86 +48,15 @@ p {
  
 h2 {
     padding-bottom: 20px;
-    font-family: 'Georgia', Times, Times New Roman, serif;
     font-weight: bold;
 }
 
-input[type=text], select {
-    width: 100%;
-    padding: 5px 10px;
-    margin: 0px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-  }
-
-::placeholder {
-    font-size: small;
-}
-  
-input[type=submit] {
-    width: 10%;
-    background-color: #4aaaa5;
-    color: white;
-    padding: 5px 5px;
-    margin: 8px 0;
-    border: none;
-  }
-  
-  input[type=submit]:hover {
-    background-color: #45a049;
-  }
-  
 
 .card {
     border-radius: 0px;
 }
 
 
-input [type=submit], #message {
-    height: 200px;
-}
-
-
-.text-block2 {
-    background: #4aaaa5;
-    color: white; 
-    text-align: center;
-    width: 274px;
-    position: absolute;
-    padding: 10;
-    height: 50px;
-    bottom:20px;
-    right: 20px;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-}
-
-.text-block3 {
-    background: #4aaaa5;
-    color: white; 
-    text-align: center;
-    width: 274px;
-    position: absolute;
-    padding: 0;
-    height: 50px;
-    bottom:20px;
-    right: 20px;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-}
-
-.text-block4 {
-    background: #4aaaa5;
-    color: white; 
-    text-align: center;
-    width: 274px;
-    position: absolute;
-    padding: 0;
-    height: 50px;
-    bottom:20px;
-    right: 20px;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-}
-
-/*need to make sticky and adjust width*/
 footer {
     text-align: center;
     border-top: 8px solid #4aaaa5;
@@ -159,7 +73,7 @@ footer {
     font-size: 12px;
  }
 
-html,
+
 body {
     height: 100%
 }
@@ -173,7 +87,7 @@ body {
 
 footer,
 .push {
-    height: 105px;
+    height: 120px;
 }
 
 .text-block {
@@ -186,35 +100,150 @@ footer,
     height: 50px;
     bottom:20px;
     right: 20px;
-    font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
-.text-block5 {
-    background: #4aaaa5;
-    color: white; 
-    text-align: center;
-    width: 274px;
-    position: absolute;
-    padding: 0;
-    height: 50px;
-    bottom:20px;
-    right: 20px;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-}
 
 h4 {
     padding-top: 20px;
     padding-bottom: 20px;
 }
 
-form {
-    color: #777777;
-}
 
-/*need to remove borders from thumbnails, but have labels
-still cover entire width of pic*/
 
 .img-thumbnail {
-   border: 1px hidden;
+   border: 1px solid #4aaaa5;
+   border-radius: 0px;
+   height: 284px; 
+   margin-bottom: 10px;
 }
 
+
+/*.py-3 {
+    padding-bottom: 1rem!important;
+    padding-top:1rem!important; 
+}*/
+
+/*.mt-auto {
+    margin-top: auto!important;
+}*/
+
+/*footer{
+    padding-bottom: 20px;
+}*/
+
+
+/*@media screen and (max-width:500px) {
+    body {
+        width: 100%;
+    }
+
+    .card {
+    width: 35%;
+    padding-right:0px;
+    
+    }
+    .card-body{
+     width: 30%; 
+     padding-right: 0px;  
+     margin-right: auto;
+    }
+
+    p {
+        width: 100%;
+        justify-content: center;
+        margin-right:0px;
+    }
+    
+    .navbar {
+        position: center;
+    }
+
+    footer,
+    .push {
+        height: 150px;  
+    }
+
+    #profile {
+        position: center;
+    }
+
+    img {
+        position: center;
+    }
+
+    /*col {
+        /*width: 35%;
+    }
+
+    #about-me {
+        width: 30%;
+    }
+
+    .card-title {
+        width: 120%;
+    }
+    
+}*/
+
+
+/*@media screen and (max-width:500px) {
+    body {
+        width: 100%;
+    }
+
+    .card {
+    width: 499px;
+    padding-right:0px;
+
+    }
+    .card-body{
+     width:499px; 
+     padding-right: 0px;  
+     margin-right: auto;
+    }
+
+    p {
+        width: 100%;
+        justify-content: center;
+        margin-right:0px;
+    }
+    
+    .navbar {
+        position: center;
+    }*/
+
+    footer,
+    .push {
+        height: 150px;  
+    }
+
+    /*#profile {
+        position: center;
+    }
+
+    /*.img-thumbnail {
+        position: center;
+    }*/
+
+    /*.col.mx {
+        width: 50%;
+        border-right:1px solid #4aaaa5;
+    }
+
+    .card-title {
+        width: 150%;
+    }
+
+    .text-block{
+        width: 92%;
+        justify-content: center;
+    }*/
+
+    .nav-item:first-child {
+        align-items: center;
+        padding-left:100px;
+    }
+
+    
+    
+/*}
