reconfigured bootstrap styling

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -5,11 +5,9 @@ body {
  h1 {
     background-color: #4aaaa5;
     padding-bottom: 20px;
-    /*width: auto;*/
+    width: auto;
     height:100px;
     padding-top: 20px;
-    /*padding-left:10px;*/
-    /*padding-right: 10px;*/
     font-weight:bold;
     font-size: 32px;   
     margin-left: 0px;
@@ -20,6 +18,7 @@ body {
     border-bottom: 1px solid #cccccc; 
     margin-left:0px;  
 }
+ 
 
 .nav {
     border: none;
@@ -78,28 +77,20 @@ body {
     height: 100%
 }
 
-.container {
-    height: auto !important;
-    height: 100%;
-    min-height: 100%;
-    margin: 0 auto -105px;
-}
-
 footer,
 .push {
-    height: 120px;
+    height: 130px;
 }
 
 .text-block {
     background: #4aaaa5;
     color: white; 
     text-align: center;
-    width: 274px;
+    width: 94%;
     position: absolute;
     padding: 0;
     height: 50px;
-    bottom:20px;
-    right: 20px;
+    bottom:15px;
 }
 
 
@@ -114,48 +105,12 @@ h4 {
    border: 1px solid #4aaaa5;
    border-radius: 0px;
    height: 284px; 
+   width: 100%;
    margin-bottom: 10px;
 }
 
-
-/*.py-3 {
-    padding-bottom: 1rem!important;
-    padding-top:1rem!important; 
-}*/
-
-/*.mt-auto {
-    margin-top: auto!important;
-}*/
-
-/*footer{
-    padding-bottom: 20px;
-}*/
-
-
-/*@media screen and (max-width:500px) {
-    body {
-        width: 100%;
-    }
-
-    .card {
-    width: 35%;
-    padding-right:0px;
-    
-    }
-    .card-body{
-     width: 30%; 
-     padding-right: 0px;  
-     margin-right: auto;
-    }
-
-    p {
-        width: 100%;
-        justify-content: center;
-        margin-right:0px;
-    }
-    
-    .navbar {
-        position: center;
+.nav-item {
+        padding-left:10px;
     }
 
     footer,
@@ -163,87 +118,11 @@ h4 {
         height: 150px;  
     }
 
-    #profile {
-        position: center;
-    }
 
-    img {
-        position: center;
-    }
-
-    /*col {
-        /*width: 35%;
-    }
-
-    #about-me {
-        width: 30%;
-    }
-
-    .card-title {
-        width: 120%;
+/*@media screen and (max-width:500px) {
+    .text-block {
     }
     
 }*/
 
 
-/*@media screen and (max-width:500px) {
-    body {
-        width: 100%;
-    }
-
-    .card {
-    width: 499px;
-    padding-right:0px;
-
-    }
-    .card-body{
-     width:499px; 
-     padding-right: 0px;  
-     margin-right: auto;
-    }
-
-    p {
-        width: 100%;
-        justify-content: center;
-        margin-right:0px;
-    }
-    
-    .navbar {
-        position: center;
-    }*/
-
-    footer,
-    .push {
-        height: 150px;  
-    }
-
-    /*#profile {
-        position: center;
-    }
-
-    /*.img-thumbnail {
-        position: center;
-    }*/
-
-    /*.col.mx {
-        width: 50%;
-        border-right:1px solid #4aaaa5;
-    }
-
-    .card-title {
-        width: 150%;
-    }
-
-    .text-block{
-        width: 92%;
-        justify-content: center;
-    }*/
-
-    .nav-item:first-child {
-        align-items: center;
-        padding-left:100px;
-    }
-
-    
-    
-/*}
